# FastAPI-sample

./: .gitignore  01_vocaboost.code-workspace  README.md  Taskfile.yml  docker-compose.yml  mise.toml
.github/workflows/: python-lint-test.yml
api/: .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
api/tests/: test_main.py
docs/api/: README.md
